tests/error/linear_errors/method_capture.err
Error: Copy violation (at $FILE:17:8)
   | 
15 | @guppy
16 | def foo(s: Struct @owned) -> Struct:
17 |     f = s.foo
   |         ^^^^^ This expression implicitly constructs a closure that
   |               captures a non-copyable value
   | 
17 |     f = s.foo
   |         - This expression with non-copyable type `Struct` is
   |           implicitly captured

Guppy compilation failed due to 1 previous error
